# syntran

./: .gitattributes  .gitignore  .gitmodules  .run-samples.sh  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.3.18  Dockerfile.gcc  Dockerfile.rocky  Dockerfile.ubuntu  LICENSE  README.md  build-doc.sh  build.rsp  build.sh  fpm.toml  gen-header.sh  install.sh  run.sh  syup.sh  test-bin.sh  test-branch.sh  test-explorer.sh  test-ifx.sh  test.sh
.github/workflows/: main.yml
doc/: README.md  docker.md  errors.md  ford.md  include-files.md  shared-libs.md  src-gen.md
docker/: Dockerfile.bin-alma  Dockerfile.bin-arch  Dockerfile.bin-debian  Dockerfile.bin-fedora  Dockerfile.bin-gentoo  Dockerfile.bin-kali  Dockerfile.bin-rocky  Dockerfile.bin-rocky10  Dockerfile.bin-suse  Dockerfile.bin-ubuntu  Dockerfile.bin-ubuntu-22  Dockerfile.branch-alma  Dockerfile.branch-arch  Dockerfile.branch-debian  Dockerfile.branch-fedora  Dockerfile.branch-gentoo  Dockerfile.branch-kali  Dockerfile.branch-rocky  Dockerfile.branch-suse  Dockerfile.branch-ubuntu  Dockerfile.branch-ubuntu-22  Dockerfile.broke-alma  Dockerfile.broke-rocky
samples/: aes.syntran  args.syntran  argv.syntran  arithmetic.syntran  arithmetic2.syntran  array-fns.syntran  arrays.syntran  bad-syntax.syntran  base64.syntran  betweenle.syntran  betweenle_state.txt  bin-search.syntran  blocks.syntran  dict_i64_fn.syntran  else-if.syntran  fibonacci-1.syntran  fibonacci-3.syntran  fibonacci-4.syntran  fibonacci1.syntran  for.syntran  gcd.syntran  hello_name.syntran  logo.syntran  md5.syntran  pi-1.syntran  pi-2.syntran  poople.syntran  primes-1.syntran  primes-2.syntran  primes-3.syntran  primes1.syntran  qsort.syntran  quine-1.syntran  quine-2.syntran  quine-3.syntran  random.syntran  sha256.syntran  shebang.syntran  struct.syntran  variables.syntran  (+1 more)
samples/aoc/2020/1/: input.txt  main.syntran
samples/aoc/2020/2/: main-v0.syntran  main.syntran
samples/aoc/2020/3/: main.syntran
samples/bridge/: bridge.c  bridge.syntran  input-0.txt  input-1.txt  input-2.txt  run-c.sh  shuffle-input-0.txt  test-input-0.txt  test-input-1.txt  utils.syntran
samples/wave-equation-1d/: plot-syntran-wave-eq.sce  run.sh  wave.syntran
samples/wave-equation-2d/: .gitignore  convert.sh  plot-syntran-wave-eq.sce  run.sh  wave.syntran
samples/wave-equation-2d-paraview/: .gitignore  batch.py  run.sh  wave.syntran
samples/wave-equation-2d-vector/: batch.py  run.sh  wave.syntran
src/: app.f90  bool.f90  bytecode.f90  c_parse.f90  compile.f90  compile_ctrl.f90  compiler.F90  consts.f90  core.f90  errors.f90  eval.f90  eval_array.f90  eval_control.f90  eval_expr.f90  eval_fn.f90  gen_math.sh  ifport_shim.f90  intr_fns.f90  intr_fns_array.f90  intr_fns_io.f90  intr_fns_math.f90  intr_fns_minmax.f90  intr_fns_trig.f90  intr_vars.f90  intrinsic_fns.f90  lex.f90  lexer.f90  line_edit.f90  main.f90  math.f90  math_bin_add.f90  math_bin_div.f90  math_bin_matmul.f90  math_bin_mul.f90  math_bin_pow.f90  math_bin_subtract.f90  math_bin_template.f90  math_bit_and.f90  math_bit_left_shift.f90  math_bit_not.f90  (+22 more)
src/benchmarks/: benchmark-slice.sh  benchmark.sh  primes-1.py  primes-1.syntran  slice-bounds.syntran  slice-large.syntran  slice-small.syntran  slice-str.syntran
src/c/: debug_alloc.c  isocline_wrap.c
src/tests/: core.f90  long.f90  test.f90
src/tests/long/: long.f90
src/tests/long/aoc/: dict_i64.syntran  dict_str.syntran  minheap_vec_i32.syntran  poople.syntran  poople_lib.syntran  poople_test.syntran  poople_test_dict.txt  utils-2024.syntran  utils.syntran  utils_2024.syntran
src/tests/repl/: common.tcl  continuation-hint.exp  ctrl-d-exit.exp  ctrl-r-search.exp  history-uparrow.exp  line-edit.exp  test-repl.sh
src/tests/test-src/: mv.sh  test-01-blocks.syntran  test-01-scopes.syntran  test-02-for.syntran  test-02-if.syntran  test-03-if.syntran  test-04-if.syntran  test-05-for.syntran  test-06-else.syntran  test-07-else.syntran  test-08-else.syntran  test-09-else-if.syntran  test-1.syntran  test-10-else-if.syntran  test-11-else-if.syntran  test-12-else-if.syntran
src/tests/test-src/array-bool/: test-01.syntran
src/tests/test-src/array-f32/: test-01.syntran  test-02.syntran  test-03.syntran  test-04.syntran  test-05.syntran  test-06.syntran  test-07.syntran  test-08.syntran
src/tests/test-src/array-i32/: test-01.syntran  test-02.syntran  test-03.syntran  test-04.syntran  test-05.syntran  test-06.syntran  test-07.syntran  test-08.syntran  test-09.syntran
src/tests/test-src/array-str/: test-01.syntran  test-02.syntran
src/tests/test-src/bitwise/: test-01.syntran  test-02.syntran  test-03.syntran  test-04.syntran
src/tests/test-src/control/: test-02.syntran  test-03.syntran  test-04.syntran  test-05.syntran  test-06.syntran  test-07.syntran  test-08.syntran  test-09.syntran  test-10.syntran  test-11.syntran  test-12.syntran  test-13.syntran  test-14.syntran  test-15.syntran  test-16.syntran  test-17.syntran  test-18.syntran  test-19.syntran
src/tests/test-src/dict/: dict_str.syntran  test-01.syntran  test-02.syntran  test-03.syntran  test-04.syntran
src/tests/test-src/errors/: E1-bad-i32.syntran  E10-unterminated-str.syntran  E11-unterminated-raw-str.syntran  E12-array-struct-slice.syntran  E13-struct-array-slice.syntran  E14-non-int-subscript.syntran  E15-bad-f32.syntran  E16-bad-f64.syntran  E17-bad-type.syntran  E18-bad-type-suffix.syntran  E19-unexpected-char.syntran  E2-bad-i64.syntran  E20-unexpected-token.syntran  E21-void-assign.syntran  E22-redeclare-var.syntran  E23-redeclare-mem.syntran  E24-redeclare-fn.syntran  E25-redeclare-intr-fn.syntran  E26-redeclare-struct.syntran  E27-redeclare-primitive.syntran  E28-undeclare-var.syntran  E29-undeclare-fn.syntran  E3-bad-hex32.syntran  E30-std-only-fn.syntran  E31-no-return.syntran  E32-missing-return.syntran  E33-bad-arg-count.syntran  E34-too-few-args.syntran  E35-too-many-args.syntran  E36-bad-sub-count.syntran  E37-bad-sub-rank.syntran  E38-empty-step.syntran  E39-scalar-subscript.syntran  E4-bad-hex64.syntran  E40-bad-cat-rank.syntran  (+81 more)
(+295 files in other folders)
